# Mesh-Rendering-Framework

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: version.rc.in
cmake/lib/: copyOutputs.cmake
include/: GeoMath.h  Geometry.h  Hooks.h  Menu.h  Mesh.h  MeshMath.h  MeshRenderer.h  MeshRendererAPI.h  Nif.h  Node.h  PCH.h  RenderManager.h  SKSEMenuFramework.h  UI.h
src/: Geometry.cpp  Hooks.cpp  Mesh.cpp  MeshRendererAPI.cpp  RenderManager.cpp  UI.cpp  plugin.cpp
